update msal-browser docs

--- a/ref/msal-browser/globals.html
+++ b/ref/msal-browser/globals.html
@@ -40,8 +40,6 @@
 							<label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
 							<input type="checkbox" id="tsd-filter-externals" checked />
 							<label class="tsd-widget" for="tsd-filter-externals">Externals</label>
-							<input type="checkbox" id="tsd-filter-only-exported" />
-							<label class="tsd-widget" for="tsd-filter-only-exported">Only exported</label>
 						</div>
 					</div>
 					<a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
@@ -70,28 +68,30 @@
 						<section class="tsd-index-section ">
 							<h3>External modules</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-external-module"><a href="modules/_app_configuration_.html" class="tsd-kind-icon">&quot;app/<wbr>Configuration&quot;</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_app_publicclientapplication_.html" class="tsd-kind-icon">&quot;app/<wbr>Public<wbr>Client<wbr>Application&quot;</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_cache_browserstorage_.html" class="tsd-kind-icon">&quot;cache/<wbr>Browser<wbr>Storage&quot;</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_crypto_browsercrypto_.html" class="tsd-kind-icon">&quot;crypto/<wbr>Browser<wbr>Crypto&quot;</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_crypto_cryptoops_.html" class="tsd-kind-icon">&quot;crypto/<wbr>Crypto<wbr>Ops&quot;</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_crypto_guidgenerator_.html" class="tsd-kind-icon">&quot;crypto/<wbr>Guid<wbr>Generator&quot;</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_crypto_pkcegenerator_.html" class="tsd-kind-icon">&quot;crypto/<wbr>Pkce<wbr>Generator&quot;</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_encode_base64decode_.html" class="tsd-kind-icon">&quot;encode/<wbr>Base64<wbr>Decode&quot;</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_encode_base64encode_.html" class="tsd-kind-icon">&quot;encode/<wbr>Base64<wbr>Encode&quot;</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_error_browserautherror_.html" class="tsd-kind-icon">&quot;error/<wbr>Browser<wbr>Auth<wbr>Error&quot;</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_error_browserconfigurationautherror_.html" class="tsd-kind-icon">&quot;error/<wbr>Browser<wbr>Configuration<wbr>Auth<wbr>Error&quot;</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_index_.html" class="tsd-kind-icon">&quot;index&quot;</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_interaction_handler_interactionhandler_.html" class="tsd-kind-icon">&quot;interaction_<wbr>handler/<wbr>Interaction<wbr>Handler&quot;</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_interaction_handler_popuphandler_.html" class="tsd-kind-icon">&quot;interaction_<wbr>handler/<wbr>Popup<wbr>Handler&quot;</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_interaction_handler_redirecthandler_.html" class="tsd-kind-icon">&quot;interaction_<wbr>handler/<wbr>Redirect<wbr>Handler&quot;</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_network_fetchclient_.html" class="tsd-kind-icon">&quot;network/<wbr>Fetch<wbr>Client&quot;</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_network_xhrclient_.html" class="tsd-kind-icon">&quot;network/<wbr>Xhr<wbr>Client&quot;</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_types_authcallback_.html" class="tsd-kind-icon">&quot;types/<wbr>Auth<wbr>Callback&quot;</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_utils_browserconstants_.html" class="tsd-kind-icon">&quot;utils/<wbr>Browser<wbr>Constants&quot;</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_utils_browserstringutils_.html" class="tsd-kind-icon">&quot;utils/<wbr>Browser<wbr>String<wbr>Utils&quot;</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_utils_browserutils_.html" class="tsd-kind-icon">&quot;utils/<wbr>Browser<wbr>Utils&quot;</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_utils_mathutils_.html" class="tsd-kind-icon">&quot;utils/<wbr>Math<wbr>Utils&quot;</a></li>
+								<li class="tsd-kind-external-module tsd-is-external"><a href="modules/_package_.html" class="tsd-kind-icon">&quot;package&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_src_app_publicclientapplication_.html" class="tsd-kind-icon">&quot;src/app/<wbr>Public<wbr>Client<wbr>Application&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_src_cache_browserstorage_.html" class="tsd-kind-icon">&quot;src/cache/<wbr>Browser<wbr>Storage&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_src_config_configuration_.html" class="tsd-kind-icon">&quot;src/config/<wbr>Configuration&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_src_crypto_browsercrypto_.html" class="tsd-kind-icon">&quot;src/crypto/<wbr>Browser<wbr>Crypto&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_src_crypto_cryptoops_.html" class="tsd-kind-icon">&quot;src/crypto/<wbr>Crypto<wbr>Ops&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_src_crypto_guidgenerator_.html" class="tsd-kind-icon">&quot;src/crypto/<wbr>Guid<wbr>Generator&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_src_crypto_pkcegenerator_.html" class="tsd-kind-icon">&quot;src/crypto/<wbr>Pkce<wbr>Generator&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_src_encode_base64decode_.html" class="tsd-kind-icon">&quot;src/encode/<wbr>Base64<wbr>Decode&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_src_encode_base64encode_.html" class="tsd-kind-icon">&quot;src/encode/<wbr>Base64<wbr>Encode&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_src_error_browserautherror_.html" class="tsd-kind-icon">&quot;src/error/<wbr>Browser<wbr>Auth<wbr>Error&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_src_error_browserconfigurationautherror_.html" class="tsd-kind-icon">&quot;src/error/<wbr>Browser<wbr>Configuration<wbr>Auth<wbr>Error&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_src_index_.html" class="tsd-kind-icon">&quot;src/index&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_src_interaction_handler_interactionhandler_.html" class="tsd-kind-icon">&quot;src/interaction_<wbr>handler/<wbr>Interaction<wbr>Handler&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_src_interaction_handler_popuphandler_.html" class="tsd-kind-icon">&quot;src/interaction_<wbr>handler/<wbr>Popup<wbr>Handler&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_src_interaction_handler_redirecthandler_.html" class="tsd-kind-icon">&quot;src/interaction_<wbr>handler/<wbr>Redirect<wbr>Handler&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_src_interaction_handler_silenthandler_.html" class="tsd-kind-icon">&quot;src/interaction_<wbr>handler/<wbr>Silent<wbr>Handler&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_src_network_fetchclient_.html" class="tsd-kind-icon">&quot;src/network/<wbr>Fetch<wbr>Client&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_src_network_xhrclient_.html" class="tsd-kind-icon">&quot;src/network/<wbr>Xhr<wbr>Client&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_src_types_authcallback_.html" class="tsd-kind-icon">&quot;src/types/<wbr>Auth<wbr>Callback&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_src_utils_browserconstants_.html" class="tsd-kind-icon">&quot;src/utils/<wbr>Browser<wbr>Constants&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_src_utils_browserstringutils_.html" class="tsd-kind-icon">&quot;src/utils/<wbr>Browser<wbr>String<wbr>Utils&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_src_utils_browserutils_.html" class="tsd-kind-icon">&quot;src/utils/<wbr>Browser<wbr>Utils&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_src_utils_mathutils_.html" class="tsd-kind-icon">&quot;src/utils/<wbr>Math<wbr>Utils&quot;</a></li>
 							</ul>
 						</section>
 					</div>
@@ -104,71 +104,83 @@
 					<li class="globals current ">
 						<a href="globals.html"><em>Globals</em></a>
 					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="modules/_app_configuration_.html">&quot;app/<wbr>Configuration&quot;</a>
+					<li class="label tsd-is-external">
+						<span>Internals</span>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_app_publicclientapplication_.html">&quot;app/<wbr>Public<wbr>Client<wbr>Application&quot;</a>
+						<a href="modules/_src_app_publicclientapplication_.html">&quot;src/app/<wbr>Public<wbr>Client<wbr>Application&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_cache_browserstorage_.html">&quot;cache/<wbr>Browser<wbr>Storage&quot;</a>
+						<a href="modules/_src_cache_browserstorage_.html">&quot;src/cache/<wbr>Browser<wbr>Storage&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_crypto_browsercrypto_.html">&quot;crypto/<wbr>Browser<wbr>Crypto&quot;</a>
+						<a href="modules/_src_config_configuration_.html">&quot;src/config/<wbr>Configuration&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_crypto_cryptoops_.html">&quot;crypto/<wbr>Crypto<wbr>Ops&quot;</a>
+						<a href="modules/_src_crypto_browsercrypto_.html">&quot;src/crypto/<wbr>Browser<wbr>Crypto&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_crypto_guidgenerator_.html">&quot;crypto/<wbr>Guid<wbr>Generator&quot;</a>
+						<a href="modules/_src_crypto_cryptoops_.html">&quot;src/crypto/<wbr>Crypto<wbr>Ops&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_crypto_pkcegenerator_.html">&quot;crypto/<wbr>Pkce<wbr>Generator&quot;</a>
+						<a href="modules/_src_crypto_guidgenerator_.html">&quot;src/crypto/<wbr>Guid<wbr>Generator&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_encode_base64decode_.html">&quot;encode/<wbr>Base64<wbr>Decode&quot;</a>
+						<a href="modules/_src_crypto_pkcegenerator_.html">&quot;src/crypto/<wbr>Pkce<wbr>Generator&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_encode_base64encode_.html">&quot;encode/<wbr>Base64<wbr>Encode&quot;</a>
+						<a href="modules/_src_encode_base64decode_.html">&quot;src/encode/<wbr>Base64<wbr>Decode&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_error_browserautherror_.html">&quot;error/<wbr>Browser<wbr>Auth<wbr>Error&quot;</a>
+						<a href="modules/_src_encode_base64encode_.html">&quot;src/encode/<wbr>Base64<wbr>Encode&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_error_browserconfigurationautherror_.html">&quot;error/<wbr>Browser<wbr>Configuration<wbr>Auth<wbr>Error&quot;</a>
+						<a href="modules/_src_error_browserautherror_.html">&quot;src/error/<wbr>Browser<wbr>Auth<wbr>Error&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_index_.html">&quot;index&quot;</a>
+						<a href="modules/_src_error_browserconfigurationautherror_.html">&quot;src/error/<wbr>Browser<wbr>Configuration<wbr>Auth<wbr>Error&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_interaction_handler_interactionhandler_.html">&quot;interaction_<wbr>handler/<wbr>Interaction<wbr>Handler&quot;</a>
+						<a href="modules/_src_index_.html">&quot;src/index&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_interaction_handler_popuphandler_.html">&quot;interaction_<wbr>handler/<wbr>Popup<wbr>Handler&quot;</a>
+						<a href="modules/_src_interaction_handler_interactionhandler_.html">&quot;src/interaction_<wbr>handler/<wbr>Interaction<wbr>Handler&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_interaction_handler_redirecthandler_.html">&quot;interaction_<wbr>handler/<wbr>Redirect<wbr>Handler&quot;</a>
+						<a href="modules/_src_interaction_handler_popuphandler_.html">&quot;src/interaction_<wbr>handler/<wbr>Popup<wbr>Handler&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_network_fetchclient_.html">&quot;network/<wbr>Fetch<wbr>Client&quot;</a>
+						<a href="modules/_src_interaction_handler_redirecthandler_.html">&quot;src/interaction_<wbr>handler/<wbr>Redirect<wbr>Handler&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_network_xhrclient_.html">&quot;network/<wbr>Xhr<wbr>Client&quot;</a>
+						<a href="modules/_src_interaction_handler_silenthandler_.html">&quot;src/interaction_<wbr>handler/<wbr>Silent<wbr>Handler&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_types_authcallback_.html">&quot;types/<wbr>Auth<wbr>Callback&quot;</a>
+						<a href="modules/_src_network_fetchclient_.html">&quot;src/network/<wbr>Fetch<wbr>Client&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_utils_browserconstants_.html">&quot;utils/<wbr>Browser<wbr>Constants&quot;</a>
+						<a href="modules/_src_network_xhrclient_.html">&quot;src/network/<wbr>Xhr<wbr>Client&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_utils_browserstringutils_.html">&quot;utils/<wbr>Browser<wbr>String<wbr>Utils&quot;</a>
+						<a href="modules/_src_types_authcallback_.html">&quot;src/types/<wbr>Auth<wbr>Callback&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_utils_browserutils_.html">&quot;utils/<wbr>Browser<wbr>Utils&quot;</a>
+						<a href="modules/_src_utils_browserconstants_.html">&quot;src/utils/<wbr>Browser<wbr>Constants&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_utils_mathutils_.html">&quot;utils/<wbr>Math<wbr>Utils&quot;</a>
+						<a href="modules/_src_utils_browserstringutils_.html">&quot;src/utils/<wbr>Browser<wbr>String<wbr>Utils&quot;</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="modules/_src_utils_browserutils_.html">&quot;src/utils/<wbr>Browser<wbr>Utils&quot;</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="modules/_src_utils_mathutils_.html">&quot;src/utils/<wbr>Math<wbr>Utils&quot;</a>
+					</li>
+					<li class="label tsd-is-external">
+						<span>Externals</span>
+					</li>
+					<li class=" tsd-kind-external-module tsd-is-external">
+						<a href="modules/_package_.html">&quot;package&quot;</a>
 					</li>
 				</ul>
 			</nav>
